Moved the category argument of vnaerr_error_fn_t to the end
Re-ordered the arguments to the error reporting function, moving category
to the end.  Given that the category argument is rarely used, it's more
logical to start with the error message.

This change breaks source compatibility.

--- a/src/TODO
+++ b/src/TODO
@@ -19,6 +19,7 @@
 == Finalizing the API's ==
 
    - Switch the error callback parameter order to put category last.
+     DONE
 
    - Reserve a spot for U parameters after T.  U parameters may not
      be a standard, but they pretty obviously belong with all the
