Moved VPT_T enum up; reserved slot for VPT_U
Re-ordered the members of the vnadata_parameter_type_t enum to group T
parameters with S parameters (the scattering parameters) as opposed to
grouping them with the other 2x2 parameters.  Reserved a slot after T
for future addition of inverse T ("U" parameters).

This is fundamentally a cosmetic change: it doesn't introduce any
functional differences.  But it does break binary compatibility --
application code must be recompiled.

--- a/src/TODO
+++ b/src/TODO
@@ -24,6 +24,7 @@
    - Reserve a spot for U parameters after T.  U parameters may not
      be a standard, but they pretty obviously belong with all the
      other pairs Y-Z H-G A-B.  And we're using them in vnacal.
+     DONE
 
    - Change the vnacal_parameter indexes to avoid small positive
      integers for possible future intermixing with port numbers.  Keep 0
