--- a/src/vnaconv.3
+++ b/src/vnaconv.3
@@ -19,7 +19,7 @@
 .TH VNACONV 3 "JULY 2017" GNU
 .nh
 .SH NAME
-vnaconv_stoz, vnaconv_stoy, vnaconv_stot, vnaconv_stoh, vnaconv_stog, vnaconv_stoa, vnaconv_stob, vnaconv_ztos, vnaconv_ztoy, vnaconv_ztot, vnaconv_ztoh, vnaconv_ztog, vnaconv_ztoa, vnaconv_ztob, vnaconv_ytos, vnaconv_ytoz, vnaconv_ytot, vnaconv_ytoh, vnaconv_ytog, vnaconv_ytoa, vnaconv_ytob, vnaconv_ttos, vnaconv_ttoz, vnaconv_ttoy, vnaconv_ttoh, vnaconv_ttog, vnaconv_ttoa, vnaconv_ttob, vnaconv_htoz, vnaconv_htoy, vnaconv_htog, vnaconv_htoa, vnaconv_htob, vnaconv_htos, vnaconv_htot, vnaconv_gtos, vnaconv_gtot, vnaconv_gtoz, vnaconv_gtoy, vnaconv_gtoh, vnaconv_gtoa, vnaconv_gtob, vnaconv_atos, vnaconv_atot, vnaconv_atoz, vnaconv_atoy, vnaconv_atoh, vnaconv_atog, vnaconv_atob, vnaconv_btos, vnaconv_btot, vnaconv_btoz, vnaconv_btoy, vnaconv_btoh, vnaconv_btog, vnaconv_btoa, vnaconv_stozi, vnaconv_ztozi, vnaconv_ytozi, vnaconv_ttozi, vnaconv_htozi, vnaconv_gtozi, vnaconv_atozi, vnaconv_btozi, vnaconv_stozn, vnaconv_stoyn, vnaconv_ztosn, vnaconv_ztoyn, vnaconv_ytozn, vnaconv_ytosn, vnaconv_stozin, vnaconv_ztozin, vnaconv_ytozin \- convert 2-port and N-port network parameters
+vnaconv_atob, vnaconv_atog, vnaconv_atoh, vnaconv_atos, vnaconv_atot, vnaconv_atou, vnaconv_atoy, vnaconv_atoz, vnaconv_atozi, vnaconv_btoa, vnaconv_btog, vnaconv_btoh, vnaconv_btos, vnaconv_btot, vnaconv_btou, vnaconv_btoy, vnaconv_btoz, vnaconv_btozi, vnaconv_gtoa, vnaconv_gtob, vnaconv_gtoh, vnaconv_gtos, vnaconv_gtot, vnaconv_gtou, vnaconv_gtoy, vnaconv_gtoz, vnaconv_gtozi, vnaconv_htoa, vnaconv_htob, vnaconv_htog, vnaconv_htos, vnaconv_htot, vnaconv_htou, vnaconv_htoy, vnaconv_htoz, vnaconv_htozi, vnaconv_stoa, vnaconv_stob, vnaconv_stog, vnaconv_stoh, vnaconv_stot, vnaconv_stou, vnaconv_stoy, vnaconv_stoyn, vnaconv_stoz, vnaconv_stozi, vnaconv_stozin, vnaconv_stozn, vnaconv_ttoa, vnaconv_ttob, vnaconv_ttog, vnaconv_ttoh, vnaconv_ttos, vnaconv_ttou, vnaconv_ttoy, vnaconv_ttoz, vnaconv_ttozi, vnaconv_utoa, vnaconv_utob, vnaconv_utog, vnaconv_utoh, vnaconv_utos, vnaconv_utot, vnaconv_utoy, vnaconv_utoz, vnaconv_utozi, vnaconv_ytoa, vnaconv_ytob, vnaconv_ytog, vnaconv_ytoh, vnaconv_ytos, vnaconv_ytosn, vnaconv_ytot, vnaconv_ytou, vnaconv_ytoz, vnaconv_ytozi, vnaconv_ytozin, vnaconv_ytozn, vnaconv_ztoa, vnaconv_ztob, vnaconv_ztog, vnaconv_ztoh, vnaconv_ztos, vnaconv_ztosn, vnaconv_ztot, vnaconv_ztou, vnaconv_ztoy, vnaconv_ztoyn, vnaconv_ztozi, vnaconv_ztozin \- convert 2-port and N-port network parameters
 .\"
 .SH SYNOPSIS
 .SS "Include and Link"
@@ -31,6 +31,11 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "void vnaconv_stot(const double complex (*" s ")[2],"
 .if n .in +4n
 .BI "double complex (*" t ")[2]);"
+.if n .in -4n
+.PP
+.BI "void vnaconv_stou(const double complex (*" s ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2]);"
 .if n .in -4n
 .PP
 .BI "void vnaconv_stoz(const double complex (*" s ")[2],"
@@ -80,6 +85,11 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "double complex (*" s ")[2]);"
 .if n .in -4n
 .PP
+.BI "void vnaconv_ttou(const double complex (*" t ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2]);"
+.if n .in -4n
+.PP
 .BI "void vnaconv_ttoz(const double complex (*" t ")[2],"
 .if n .in +4n
 .BI "double complex (*" z ")[2],"
@@ -122,6 +132,58 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "const double complex *" z0 ");"
 .in -4n
 .PP
+.BI "void vnaconv_utos(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" s ")[2]);"
+.if n .in -4n
+.PP
+.BI "void vnaconv_utot(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" t ")[2]);"
+.if n .in -4n
+.PP
+.BI "void vnaconv_utoz(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" z ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utoy(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" y ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utoh(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" h ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utog(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" g ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utoa(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" a ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utob(const double complex (*" u ")[2],"
+.if n .in +4n
+.BI "double complex (*" b ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
 .BI "void vnaconv_ztos(const double complex (*" z ")[2],"
 .if n .in +4n
 .BI "double complex (*" s ")[2],"
@@ -132,6 +194,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "void vnaconv_ztot(const double complex (*" z ")[2],"
 .if n .in +4n
 .BI "double complex (*" t ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_ztou(const double complex (*" z ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
 .if !n .in +4n
 .BI "const double complex *" z0 ");"
 .in -4n
@@ -170,6 +239,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "const double complex *" z0 ");"
 .in -4n
 .PP
+.BI "void vnaconv_ytou(const double complex (*" y ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
 .BI "void vnaconv_ytoh(const double complex (*" y ")[2],"
 .if n .in +4n
 .BI "double complex (*" h ")[2]);"
@@ -200,6 +276,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "void vnaconv_htot(const double complex (*" h ")[2],"
 .if n .in +4n
 .BI "double complex (*" t ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_htou(const double complex (*" h ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
 .if !n .in +4n
 .BI "const double complex *" z0 ");"
 .in -4n
@@ -243,6 +326,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "const double complex *" z0 ");"
 .in -4n
 .PP
+.BI "void vnaconv_gtou(const double complex (*" g ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
 .BI "void vnaconv_gtoz(const double complex (*" g ")[2],"
 .if n .in +4n
 .BI "double complex (*" z ")[2]);"
@@ -278,6 +368,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .BI "void vnaconv_atot(const double complex (*" a ")[2],"
 .if n .in +4n
 .BI "double complex (*" t ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_atou(const double complex (*" a ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
 .if !n .in +4n
 .BI "const double complex *" z0 ");"
 .in -4n
@@ -319,6 +416,12 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .if !n .in +4n
 .BI "const double complex *" z0 ");"
 .PP
+.BI "void vnaconv_btou(const double complex (*" b ")[2],"
+.if n .in +4n
+.BI "double complex (*" u ")[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.PP
 .BI "void vnaconv_btoz(const double complex (*" b ")[2],"
 .if n .in +4n
 .BI "double complex (*" z ")[2]);"
@@ -354,6 +457,13 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .in -4n
 .PP
 .BI "void vnaconv_ttozi(const double complex (*" t ")[2],"
+.if n .in +4n
+.BI "double complex " zi "[2],"
+.if !n .in +4n
+.BI "const double complex *" z0 ");"
+.in -4n
+.PP
+.BI "void vnaconv_utozi(const double complex (*" u ")[2],"
 .if n .in +4n
 .BI "double complex " zi "[2],"
 .if !n .in +4n
@@ -451,13 +561,14 @@ Link with \fI-lvna\fP \fI-lm\fP.
 These functions convert between various mathematical representations
 of electrical n-port networks.
 Representations include scattering (s-parameters), scattering-transfer
-(t-parameters), impedance (z-parameters), admittance (y-parameters),
-hybrid (h-parameters), inverse hybrid (g-parameters), \s-2ABCD\s+2
-(a-parameters) and inverse \s-2ABCD\s+2 (b-parameters).
+(t-parameters), inverse scattering-transfer (u-parameters), impedance
+(z-parameters), admittance (y-parameters), hybrid (h-parameters),
+inverse hybrid (g-parameters), \s-2ABCD\s+2 (a-parameters) and inverse
+\s-2ABCD\s+2 (b-parameters).
 .PP
 While s-parameters, z-parameters and y-parameters are defined for any
-number of ports, t-parameters, h-parameters, g-parameters, a-parameters
-and b-parameters are defined for two-port networks only.
+number of ports, t-parameters, u-paramters, h-parameters, g-parameters,
+a-parameters and b-parameters are defined for two-port networks only.
 The library contains one set of functions for two-port networks and
 another set of functions for n-port networks \- the later all have names
 ending in \fBn\fP.
@@ -609,6 +720,31 @@ left [ matrix{ ccol{ { A sub 2 } above { B sub 2 } } } right ]
 .sp
 The \fBt\fP parameters for a cascade of two-port networks is the
 left-to-right matrix product of the \fBt\fP parameters of each successive
+stage.
+.in -4n
+.sp
+.PP
+The \fBu\fP (inverse scattering-transfer) parameters satisfy:
+.sp
+.in +4n
+.ie t \{\
+.EQ
+left [ matrix{ ccol{ { a sub 2 } above { b sub 2 } } } right ] ~=~
+left [ matrix{ ccol{ { u sub 11 } above { u sub 21 } }
+               ccol{ { u sub 12 } above { u sub 22 } } } right ] ~
+left [ matrix{ ccol{ { b sub 1 } above { a sub 1 } } } right ]
+.EN
+.\}
+.el \{\
+.nf
+[ a2 ]   [ u11 u12 ] [ b1 ]
+[    ] = [         ] [    ]
+[ b2 ]   [ u21 u22 ] [ a1 ]
+.fi
+.\}
+.sp
+The \fBu\fP parameters for a cascade of two-port networks is the
+right-to-left matrix product of the \fBu\fP parameters of each successive
 stage.
 .in -4n
 .sp
