Moved examples directory to /usr/share/doc/libvna*/examples
For consistency, made the /usr/local and RPM installs put the example
programs into their own install directory.  The Debian package was
already putting them there.

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -603,7 +603,8 @@ The \fBvnacal_map_apply\fP() function needed to use these calibrations
 hasn't yet been implemented.
 .\"
 .SH EXAMPLES
-Example programs can be found in <install-prefix>/share/doc/libvna.
+Example programs can be found in /usr/share/doc/libvna*/examples/ or
+/usr/local/share/doc/libvna/examples/.
 .\" .nf
 .\" .ft CW
 .\" .ft R
